<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/content_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:src="@drawable/id_login_tip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/s_login_hint"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/id_login_bg_2"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_username_label"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/s_username_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_username_hint"
                android:inputType="number"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tv_password_label"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/s_password_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />
        </LinearLayout>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/s_auto_login_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/btn_regist_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/id_login_registe" />

            <ImageView
                android:id="@+id/btn_login_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/id_login_login" />
        </LinearLayout>

        <TextView
            android:id="@+id/find_password_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/s_find_pwssword_hint"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_login_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/id_login_bg_1"
        android:src="@drawable/id_login_tel" />

</LinearLayout>